@@ -1,6 +1,8 @@
 Changes for the Labyrinth-Plugin-Requests
 =========================================
 
+        - switch to using ParamCheck.
+
 1.07	2015-03-18
         - added more tests around deletion.
         - added tests for SecureSelect & SecureName.
